--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "YOUR_TOKEN_HERE",
-    "clientId":"YOUR_CLIENT_ID_HERE",
-    "guildId": "YOUR_GUILD_ID_HERE"
+    "token": "MTI5MDk0NzEzNzI0ODY5MDIzNw.GO_QM3.fampXkdwAzoHZwVjuWMczslprY8VdKbp2a805A",
+    "clientId":"1290947137248690237",
+    "guildId": "1392297165438718012"
 }
